{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 14,
  "lineage": "b44dce79-b751-60d8-921a-47a29b5f78cc",
  "resources": [
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:internet-gateway/igw-0b03aed97c252a571",
            "id": "igw-0b03aed97c252a571",
            "owner_id": "767397692701",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "vpc_id": "vpc-014facb13d8425791"
          },
          "dependencies": [
            "module.web-server.aws_vpc.web"
          ]
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b03aed97c252a571",
            "id": "r-rtb-0ed9d856f2c64f1f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed9d856f2c64f1f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web-server.aws_internet_gateway.web-gw",
            "module.web-server.aws_route_table.web",
            "module.web-server.aws_vpc.web"
          ]
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:route-table/rtb-0ed9d856f2c64f1f1",
            "id": "rtb-0ed9d856f2c64f1f1",
            "owner_id": "767397692701",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "web-route"
            },
            "tags_all": {
              "Name": "web-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-014facb13d8425791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web-server.aws_vpc.web"
          ]
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:security-group/sg-0e2d1fe6c8b5dc56d",
            "description": "allow ssh from home and work",
            "egress": [],
            "id": "sg-0e2d1fe6c8b5dc56d",
            "ingress": [],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "767397692701",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "timeouts": null,
            "vpc_id": "vpc-014facb13d8425791"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web-server.aws_vpc.web"
          ]
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:vpc/vpc-014facb13d8425791",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00054dce8f58d57ce",
            "default_route_table_id": "rtb-06487ef9fad3139f6",
            "default_security_group_id": "sg-0efd8d9c0ca011347",
            "dhcp_options_id": "dopt-0fa2a1e6c50f94007",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014facb13d8425791",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06487ef9fad3139f6",
            "owner_id": "767397692701",
            "tags": {
              "Name": "project_vpc",
              "Project": "lab_week_10"
            },
            "tags_all": {
              "Name": "project_vpc",
              "Project": "lab_week_10"
            }
          }
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "web-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:security-group-rule/sgr-026fc9a1d8d9a8aa0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-026fc9a1d8d9a8aa0",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e2d1fe6c8b5dc56d",
            "security_group_rule_id": "sgr-026fc9a1d8d9a8aa0",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web-server.aws_security_group.web",
            "module.web-server.aws_vpc.web"
          ]
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:security-group-rule/sgr-0cc45e0739ed4c0d0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0cc45e0739ed4c0d0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e2d1fe6c8b5dc56d",
            "security_group_rule_id": "sgr-0cc45e0739ed4c0d0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web-server.aws_security_group.web",
            "module.web-server.aws_vpc.web"
          ]
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:767397692701:security-group-rule/sgr-05f3234195d9c3cdd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-05f3234195d9c3cdd",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0e2d1fe6c8b5dc56d",
            "security_group_rule_id": "sgr-05f3234195d9c3cdd",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web-server.aws_security_group.web",
            "module.web-server.aws_vpc.web"
          ]
        }
      ]
    }
  ]
}